--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
-    "react-router-dom": "^6.22.3"
+    "react-router-dom": "^6.22.3",
+    "tw-elements": "^2.0.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.64",
@@ -28,6 +29,7 @@
     "postcss": "^8.4.35",
     "tailwindcss": "^3.4.1",
     "tailwindcss-animated": "^1.0.1",
+    "tailwindcss-debug-screens": "^2.2.1",
     "vite": "^5.1.6"
   }
 }
